src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/EXTDebugLabel_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/EXTDebugLabel_StringErrorContext.class */
public final class EXTDebugLabel_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglLabelObjectEXT(IIIJ)V", "net/labymod/core/laby3d/opengl/error/generated/EXTDebugLabelErrorContext");
        methods.put("glLabelObjectEXT(IILjava/nio/ByteBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/EXTDebugLabelErrorContext");
        methods.put("glLabelObjectEXT(IILjava/lang/CharSequence;)V", "net/labymod/core/laby3d/opengl/error/generated/EXTDebugLabelErrorContext");
        methods.put("nglGetObjectLabelEXT(IIIJJ)V", "net/labymod/core/laby3d/opengl/error/generated/EXTDebugLabelErrorContext");
        methods.put("glGetObjectLabelEXT(IILjava/nio/IntBuffer;Ljava/nio/ByteBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/EXTDebugLabelErrorContext");
        methods.put("glGetObjectLabelEXT(III)Ljava/lang/String;", "net/labymod/core/laby3d/opengl/error/generated/EXTDebugLabelErrorContext");
        methods.put("glGetObjectLabelEXT(II[ILjava/nio/ByteBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/EXTDebugLabelErrorContext");
        return methods;
    }
}
